// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`use-query-and-result-fields-in-useOne-hook should handle renamed result in useOne 1`] = `
"
      import { useOne } from "@refinedev/core";
      const { result: postData } = useOne({
        id: 123
      });

      const post = postData ?? {};
    "
`;

exports[`use-query-and-result-fields-in-useOne-hook should handle result in useOne 1`] = `
"
      import { useOne } from "@refinedev/core";
      const { result } = useOne({
        id: 123
      });

      const post = result ?? {};
    "
`;

exports[`use-query-and-result-fields-in-useOne-hook should handle result with isLoading in useOne 1`] = `
"
      import { useOne } from "@refinedev/core";

      export const EditProduct = () => {
        const { result, query: {
          isLoading
        } } = useOne({ id: 123 });

        if (isLoading) {
          return <div>Loading...</div>;
        }

        return (
          <div>
            <div>Product name: {result?.name}</div>
            <div>Product price: \${result?.price}</div>
          </div>
        );
      };
    "
`;
